--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^5.2.6",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "bootstrap": "^5.3.7",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
