--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@fontsource/roboto": "^5.2.6",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^7.0.0",
+    "@fortawesome/react-fontawesome": "^0.2.3",
     "bootstrap": "^5.3.7",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
